--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.7.0",
+    "react-intl": "^2.8.0",
     "react-router-dom": "^4.3.1"
   },
   "scripts": {
@@ -26,11 +27,11 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-loader": "^8.0.5",
     "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
